docs: ✏️ キーワードを追加した

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"description": "CLI to Moduleを用いると、CLIをモジュール化することができます。",
 	"keywords": [
 		"cli",
+		"ctm",
 		"module",
 		"nodejs",
 		"cli-to-module"
